--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,6 +36,7 @@ dependencies:
   json_annotation: ^3.0.1
   cached_network_image: ^2.2.0+1
   url_launcher: ^5.5.0
+  fl_chart: ^0.11.0
 
 dev_dependencies:
   flutter_test:
