--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -33,10 +33,10 @@ dependencies:
   flutter_vector_icons: ^0.2.1
   dio: ^3.0.10
   provider: ^4.3.2
-  json_annotation: ^3.0.1
   cached_network_image: ^2.2.0+1
   url_launcher: ^5.5.0
   fl_chart: ^0.11.0
+  carousel_slider: ^2.2.1
 
 dev_dependencies:
   flutter_test:
@@ -62,7 +62,7 @@ flutter:
 
   # To add assets to your application, add an assets section, like this:
   assets:
-    - assets/launcher
+    - assets/
     - assets/images/
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware.
